restaurant section height correction to hide scrollbar

--- a/step3/sass/pages/index.scss
+++ b/step3/sass/pages/index.scss
@@ -25,8 +25,7 @@
 
 	.search-result-founds {
 		border-bottom: 1px solid $light-grey;
-		min-height: 10vh;
-		max-height: 20vh;
+		height: 10vh;
 
 		p {
 			margin: 4px;
@@ -35,33 +34,37 @@
 		button {
 			margin-bottom: 2vh;
 		}
+
+		.alert {
+			z-index: 5;
+			opacity: 1;
+		}
 	}
 
 	.restaurant-section {
 		overflow-x: hidden;
 	
 		@include media-breakpoint-up(md) {
-			min-height: 40vh;
-			max-height: 50vh;
+			height: 55vh;
 			overflow-y: auto;
 		}
 
 		/*The following is here to hide the x scrollbar*/
 		.restaurant-section {
-			//@include media-breakpoint-up(lg) {
+			@include media-breakpoint-up(lg) {
 				height: 100%;
 				width: 100%;
 				overflow: hidden;
-			//}
+			}
 		}
 		
 		.restaurant-list {
-			//@include media-breakpoint-up(lg) {
+			@include media-breakpoint-up(lg) {
 				width: 106%;
 				height: 100%;
 				overflow-y: scroll;
 				padding-right: 17px;
-			//}
+			}
 		}
 		/*End of rules to hide the x scrollbar*/
 
